# rag-vs-finetune

./: README.md  cities_population.jsonl  compare_results.ipynb  finetune.ipynb  pyproject.toml
