[tool.poetry]
name = "rag-vs-finetune"
version = "0.1.0"
description = ""
authors = ["Dylan Castillo <dylanjcastillo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.0.6"
openai = "^1.3.2"
python-dotenv = "^1.0.0"
pandas = "^2.1.3"
langchain = "^0.0.336"
tiktoken = "^0.5.1"
chromadb = "^0.4.17"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.4.1"
ruff = "^0.0.282"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
